fix alt on image

--- a/card.html
+++ b/card.html
@@ -10,7 +10,7 @@
 		<!-- your favorite animal's name goes here -->
 		<h2 id="title">Siamese Fighting Fish</h2>
 		<!-- your favorite animal's image goes here -->
-		<img src="fish.jpg" alt="Siamese Fighting">
+		<img src="fish.jpg" alt="Siamese Fighting Fish">
 		<div id="caption">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p id="interesting-fact">
