--- a/card.html
+++ b/card.html
@@ -14,7 +14,7 @@
 		<div id="caption">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p id="interesting-fact">
-				A common misconception on the Siamese fighting fish is 
+				A really common misconception on the Siamese fighting fish is 
 				they should live in vases or bowls, but this has been proven it damages their 
 				health and lowers their mood
 			</p>
